api_versioned_docs/version-12.1.2/avalonia/controls/begineditgestures.mdx
---
title: 'BeginEditGestures'
hide_title: true
slug: '/avalonia/controls/begineditgestures'
uid: 'Avalonia.Controls.BeginEditGestures'
commentId: 'T:Avalonia.Controls.BeginEditGestures'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.TreeDataGrid'
assembly: 'Avalonia.Controls.TreeDataGrid'
apiKind: 'Enum'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls'
tfms:
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">BeginEditGestures Enum</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
</div>

<div className="apiref-page__lead">

Defines the gestures that can be used to begin editing a cell.

</div>

<div className="apiref-page__signature">

```csharp
public enum BeginEditGestures
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> Enum <span className="apiref-page__relation-separator">-&gt;</span> BeginEditGestures
</div>
</div>

## Fields

| Name | Description |
| --- | --- |
| [Default](#uid-887c695aaf) | A cell will enter edit mode when the user presses F2 or double-taps it. |
| [DoubleTap](#uid-463772ea96) | A cell will enter edit mode when the user double-taps it. |
| [F2](#uid-95d994e7e1) | A cell will enter edit mode when the user presses F2. |
| [None](#uid-07f1a43748) | A cell will only enter edit mode programmatically. |
| [Tap](#uid-24e8c436fb) | A cell will enter edit mode when the user taps it. |
| [TextInput](#uid-42bf5832a6) | A cell will enter edit mode when the user types a printable character while it is selected. The typed character becomes the editor's initial content, replacing the existing value (Excel-style editing). |
| [WhenSelected](#uid-84a1dfc4c8) | A cell will enter edit mode in conjunction with a gesture only when the cell or row is currently selected. |

<section className="apiref-page__member-entry">

<span id="uid-887c695aaf"></span>

### Default Field

A cell will enter edit mode when the user presses F2 or double-taps it.

```csharp
public Avalonia.Controls.BeginEditGestures Default
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-463772ea96"></span>

### DoubleTap Field

A cell will enter edit mode when the user double-taps it.

```csharp
public Avalonia.Controls.BeginEditGestures DoubleTap
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-95d994e7e1"></span>

### F2 Field

A cell will enter edit mode when the user presses F2.

```csharp
public Avalonia.Controls.BeginEditGestures F2
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-07f1a43748"></span>

### None Field

A cell will only enter edit mode programmatically.

```csharp
public Avalonia.Controls.BeginEditGestures None
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-24e8c436fb"></span>

### Tap Field

A cell will enter edit mode when the user taps it.

```csharp
public Avalonia.Controls.BeginEditGestures Tap
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-42bf5832a6"></span>

### TextInput Field

A cell will enter edit mode when the user types a printable character while it is
selected. The typed character becomes the editor's initial content, replacing the
existing value (Excel-style editing).

```csharp
public Avalonia.Controls.BeginEditGestures TextInput
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-84a1dfc4c8"></span>

### WhenSelected Field

A cell will enter edit mode in conjunction with a gesture only when the cell or row
is currently selected.

```csharp
public Avalonia.Controls.BeginEditGestures WhenSelected
```

</section>

</ApiRefPage>

